--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
 					<li class="nav-item">
 						<a style="color:black;" class="nav-link" href="contact.html">Contact</a>
 					</li>
-
-
+					<li class="nav-item">
+						<a style="color:black;" class="nav-link" href="about.html">About</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
